--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -9,3 +9,10 @@ body {
     color: #000;
     padding: 0.2em 0;
 }
+
+pre {
+  font-family: "Courier New", Courier, monospace;
+  background-color: transparent;
+  border: none;
+  font-style: normal;
+}
