--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -10,9 +10,9 @@ body {
     padding: 0.2em 0;
 }
 
-pre {
-  font-family: "Courier New", Courier, monospace;
-  background-color: transparent;
-  border: none;
-  font-style: normal;
+canvas {
+  border:2px solid #909090;
+  margin-left: auto;
+  margin-right: auto;
+  display: block
 }
